[package]
name = "rhodium"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
color-eyre = "0.6.2"
hyper = { version = "0.14.27", features = ["server", "http1", "http2", "tcp"] }
lazy_static = "1.4.0"
log = { version = "0.4.20", features = ["std"] }
markdown = "1.0.0-alpha.11"
ramhorns = "0.14.0"
syntect = "5.0.0"
thiserror = "1.0.44"
tokio = { version = "1.32.0", features = ["rt", "macros", "full"] }
